--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ canvas{
 #particles-js{
   width: 100%;
   height: 100%;
-  background-color: #b61924;
+  background-color: #90E8FF;
   background-image: url('');
   background-size: cover;
   background-position: 50% 50%;
