--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,66 @@
 
+.wrapper {
+  font-family: 'Lobster', cursive;
+}
+
 .pic-container {
   height: 100px;
   width: 100px;
+}
+
+.main-head {
+  grid-area: header;
+}
+
+.main-nav {
+  grid-area: nav;
+}
+
+.site-one {
+  grid-area: site-one;
+}
+
+.site-two {
+  grid-area: site-two;
+}
+
+.site-three {
+  grid-area: site-three;
+}
+
+.site-four {
+  grid-area: site-four;
+}
+
+.main-footer {
+  grid-area: footer;
+}
+
+.wrapper {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-areas:
+    "header"
+    "nav"
+    "site-one"
+    "site-two"
+    "site-three"
+    "site-four"
+    "footer";
+}
+
+@media (min-width: 500px) {
+  .wrapper {
+    grid-template-columns: 2fr 2fr;
+    grid-template-areas:
+      "header     header"
+      "nav        nav"
+      "site-one   site-two"
+      "site-three site-four"
+      "footer     footer";
+  }
+  nav ul {
+    display: flex;
+    justify-content: space-between;
+  }
 }
