--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 
 .listing {
+  padding: 10px;
   list-style: none;
   margin: 2em;
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fill,minmax(200px, 500px));
+  grid-template-columns: 2fr 2fr;
 }
 
 .listing li {
@@ -22,6 +23,7 @@
 }
 
 .listing .body {
+  border-top: 1px solid #ffe066;
   padding: 10px;
 }
 
