--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,12 @@
 }
 
 .main-nav {
+  padding: 10px;
   grid-area: nav;
 }
 
 .info {
+  padding: 10px;
   grid-area: info;
 }
 
@@ -66,6 +68,7 @@
 }
 
 .wrapper {
+  background-color: #79FFEF;
   font-family: 'Roboto', sans-serif;
   display: grid;
   grid-gap: 20px;
