--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 2fr 2fr;
-  background-color: #F8FFD3;
+  background-color: #5A62FF;
 }
 
 .listing li {
@@ -14,6 +14,7 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  list-style: none;
 }
 
 .listing .cta {
@@ -68,7 +69,8 @@
 }
 
 .wrapper {
-  background-color: #79FFEF;
+  padding: 0;
+  background-color: #FCFDFF;
   font-family: 'Roboto', sans-serif;
   display: grid;
   grid-gap: 20px;
