--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  list-style: none;
 }
 
 .listing .cta {
@@ -22,6 +21,7 @@
   border-top: 1px solid #ffe066;
   padding: 10px;
   text-align: center;
+  max-height: 60px;
 }
 
 .listing .body {
@@ -98,4 +98,8 @@
     display: flex;
     justify-content: space-between;
   }
+}
+
+.nav-list {
+  list-style: none;
 }
