--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
   padding: 10px;
   text-align: center;
   max-height: 60px;
+  font-size: small;
 }
 
 .listing .body {
@@ -36,6 +37,7 @@
 
 .main-head {
   grid-area: header;
+  color: powderblue;
 }
 
 .main-nav {
