--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+canvas {
+    display:block;
+    background: rgb(33,36,50);
+    position: fixed;
+    z-index: -1;
+}
 
 .listing {
   padding: 10px;
