--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,8 @@ canvas {
 }
 
 .travel-container {
-  height: 100%;
-  width: 100%;
+  height: 96%;
+  width: 96%;
 }
 
 .pic-container {
@@ -54,6 +54,7 @@ canvas {
 .main-nav {
   padding: 10px;
   grid-area: nav;
+  border-bottom: 1px solid powderblue;
 }
 
 .info {
