--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 canvas {
     display:block;
-    background: rgb(255,255,255);
+    background: teal;
     position: fixed;
-    z-index: -1;
+    z-index: 1;
 }
 
 
@@ -70,7 +70,7 @@ canvas {
 .wrapper {
   padding: 0;
   background-color: #FCFDFF;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Dosis', sans-serif;
   display: grid;
   grid-gap: 20px;
   grid-template-areas:
